# moveit2_scripts

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/moveit2_scripts/: approach_and_retreat_node.hpp  draw_x_node.hpp
launch/: approach_retreat.launch.py  draw_x.launch.py  test_gripper.launch.py  test_trajectory.launch.py  test_trajectory2.launch.py  test_trajectory3.launch.py
src/: approach_and_retreat_node.cpp  approach_retreat.cpp  draw_x.cpp  draw_x_node.cpp  test_gripper.cpp  test_trajectory.cpp  test_trajectory2.cpp  test_trajectory3.cpp
